--- a/src/app/views/account/profile/view/view.html
+++ b/src/app/views/account/profile/view/view.html
@@ -10,6 +10,7 @@
                 <dt>store name:</dt><dd>{{mdl.user.store_name}}</dd>
                 <dt>time zone:</dt><dd>{{mdl.user.timezone}}</dd>
                 <dt>ZIP code:</dt><dd>{{mdl.user.zip_code}}</dd>
+                <dt>Credit Form</dt><dd>Uploaded - Credit form Name</dd>
             </dl>
         </div>
     </article>
