--- a/src/app/views/account/settings/settings.html
+++ b/src/app/views/account/settings/settings.html
@@ -17,45 +17,140 @@
                 <h5 class="skin-color">Standard Method</h5>
                 <div class="row form-group">
                     <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Origin"> <!-- dropdown -->
+                        <label>Origin</label>
                     </div>
                     <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Destination">
+                        <label>Destination</label>
                     </div>
                     <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Zipcode From">
+                        <label>Zipcode From</label>
                     </div>
                     <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Zipcode To">
+                        <label>Zipcode To</label>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Cost">
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-2">
-                        <button class="btn-small uppercase red">Remove</button>
-                        <!--<button class="btn-small uppercase red">Remove</button>-->
+                        <label>Cost</label>
                     </div>
                 </div>
-                <hr>
-                <div class="row form-group">
+                <div class="row form-group light-fonts">
                     <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Origin"> <!-- dropdown -->
+                        <label>California</label>
                     </div>
                     <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Destination">
+                        <label>New York</label>
                     </div>
                     <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Zipcode From">
+                        <label>54321</label>
                     </div>
                     <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Zipcode To">
+                        <label>34253</label>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Cost">
+                        <label>$2300</label>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-2">
-                        <button class="btn-small uppercase red">Remove</button>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase green">Edit</button>
                     </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase red">Delete</button>
+                    </div>
+
+                </div>
+                <div class="row form-group light-fonts">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>California</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>New York</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>54321</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>34253</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <label>$2300</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase green">Edit</button>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase red">Delete</button>
+                    </div>
+
+                </div>
+                <div class="row form-group light-fonts">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>California</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>New York</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>54321</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>34253</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <label>$2300</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase green">Edit</button>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase red">Delete</button>
+                    </div>
+
+                </div>
+                <div class="row form-group light-fonts">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>California</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>New York</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>54321</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>34253</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <label>$2300</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase green">Edit</button>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase red">Delete</button>
+                    </div>
+
+                </div>
+                <div class="row form-group light-fonts">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>California</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>New York</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>54321</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>34253</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <label>$2300</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase green">Edit</button>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase red">Delete</button>
+                    </div>
+
                 </div>
                 <hr>
                 <div class="row form-group">
@@ -116,7 +211,10 @@
                         <label>Category</label>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="btn-small uppercase red">Delete</button>
+                        <button class="button btn-mini uppercase green">Edit</button>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase red">Delete</button>
                     </div>
                 </div>
                 <div class="row form-group light-fonts">
@@ -136,7 +234,10 @@
                         <label>Category</label>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="btn-small uppercase red">Delete</button>
+                        <button class="button btn-mini uppercase green">Edit</button>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase red">Delete</button>
                     </div>
                 </div>
                 <div class="row form-group light-fonts">
@@ -156,7 +257,10 @@
                         <label>Category</label>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="btn-small uppercase red">Delete</button>
+                        <button class="button btn-mini uppercase green">Edit</button>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="button btn-mini uppercase red">Delete</button>
                     </div>
                 </div>
 
@@ -177,7 +281,7 @@
                         <input type="text" class="input-text full-width" placeholder="category">
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="btn-small uppercase">Add</button>
+                        <button class="btn-small uppercase">Add More</button>
                         <!--<button class="btn-small uppercase red">Remove</button>-->
                     </div>
 
