--- a/src/app/views/account/orders/view/view.html
+++ b/src/app/views/account/orders/view/view.html
@@ -15,10 +15,10 @@
     <h2>Order Details</h2>
     <dl class="term-description">
         <dt>Order number:</dt><dd>{{mdl.order.id}}</dd>
-        <dt>First name:</dt><dd>{{mdl.order.billing_address.first_name}}</dd>
-        <dt>Last name:</dt><dd>{{mdl.order.billing_address.last_name}}</dd>
+        <dt>Name</dt><dd>{{mdl.order.billing_address.first_name}} {{mdl.order.billing_address.last_name}}</dd>
         <dt>Phone:</dt><dd>{{mdl.order.billing_address.phone}}</dd>
-        <dt>Street Address and number:</dt><dd>{{mdl.order.billing_address.address1+' '+order.billing_address.address2}}</dd>
+        <dt>Shipping Address</dt><dd>{{mdl.order.billing_address.address1+' '+order.billing_address.address2}}</dd>
+        <dt>Billing Address</dt><dd>{{mdl.order.billing_address.address1+' '+order.billing_address.address2}}</dd>
         <dt>Town / City:</dt><dd>{{mdl.order.billing_address.city.name}}</dd>
         <dt>ZIP code:</dt><dd>{{mdl.order.billing_address.zip_code}}</dd>
         <dt>Country:</dt><dd>{{mdl.order.billing_address.country.name}}</dd>
@@ -37,6 +37,7 @@
             <dl class="term-description">
                 <dt>Rented For</dt><dd>{{item.cost_breakup.subtotal.rent_unit_days}} days</dd>
                 <dt>Order Type</dt><dd>{{item.shipping_kind}}</dd>
+                <dt>Status</dt><dd>Approved</dd>
             </dl>
         </div>
         <div class="price-section table-cell">
@@ -54,7 +55,7 @@
         <div class="table-cell">
             <dl class="term-description">
                 <dt>Shipping Cost</dt><dd>${{mdl.order.shipping_charge | number}}</dd>
-
+                <dt>Additional Charges</dt><dd>${{mdl.order.shipping_charge | number}}</dd>
             </dl>
         </div>
         <div class="price-section table-cell">
