settings page updated

--- a/src/app/views/account/account.html
+++ b/src/app/views/account/account.html
@@ -10,7 +10,7 @@
         <li active-state="main.account.invoices" ui-sref="main.account.invoices.list"  ><a><i class="soap-icon-card circle"></i>Invoices</a></li>
         <li active-state="main.account.inventory" ui-sref="main.account.inventory.list"  ><a><i class="soap-icon-list circle"></i>Inventory</a></li>
         <li active-state="main.account.orders" ui-sref="main.account.orders.list"  ><a><i class="soap-icon-bag circle"></i>My Orders</a></li>
-        <li ui-sref-active="active" ui-sref="main.account.settings"  ><a><i class="soap-icon-settings circle"></i>Settings</a></li>
+        <li active-state="main.account.settings" ui-sref="main.account.settings.general"  ><a><i class="soap-icon-settings circle"></i>Settings</a></li>
     </ul>
     <div class="tab-content">
         <ui-view/>
