--- a/src/app/views/account/settings/settings.html
+++ b/src/app/views/account/settings/settings.html
@@ -2,362 +2,24 @@
     <h2>Account Settings</h2>
     <div class="settings">
         <hr />
-        <tabset>
-            <tab heading="General Settings">
-                <form>
-                    <div class="row form-group">
-                        <div class="col-xs-12 col-sm-6 col-md-4">
-                            <label>Minimum Contract Period</label>
-                            <input type="text" class="input-text full-width" placeholder="number of days">
-                        </div>
-                    </div>
-                </form>
-            </tab>
-            <tab heading="Shipping">
-                <h5 class="skin-color">Standard Method</h5>
-                <div class="row form-group">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Origin</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Destination</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Zipcode From</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Zipcode To</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>Cost</label>
-                    </div>
-                </div>
-                <div class="row form-group light-fonts">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>California</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>New York</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>54321</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>34253</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>$2300</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase green">Edit</button>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase red">Delete</button>
-                    </div>
 
-                </div>
-                <div class="row form-group light-fonts">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>California</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>New York</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>54321</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>34253</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>$2300</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase green">Edit</button>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase red">Delete</button>
-                    </div>
-
-                </div>
-                <div class="row form-group light-fonts">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>California</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>New York</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>54321</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>34253</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>$2300</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase green">Edit</button>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase red">Delete</button>
-                    </div>
-
-                </div>
-                <div class="row form-group light-fonts">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>California</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>New York</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>54321</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>34253</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>$2300</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase green">Edit</button>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase red">Delete</button>
-                    </div>
-
-                </div>
-                <div class="row form-group light-fonts">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>California</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>New York</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>54321</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>34253</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>$2300</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase green">Edit</button>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase red">Delete</button>
-                    </div>
-
-                </div>
-                <hr>
-                <div class="row form-group">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Origin"> <!-- dropdown -->
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Destination">
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Zipcode From">
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Zipcode To">
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Cost">
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-2">
-                        <button class="btn-small uppercase">Add More</button>
-                    </div>
-                </div>
-                <hr>
-            </tab>
-            <tab heading="Additional Charges">
-                <h5 class="skin-color">Additional Charges</h5>
-                <div class="row form-group">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Charge Name</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Value</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Unit</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Item Kind</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>Category</label>
-                    </div>
-                </div>
-                <div class="row form-group light-fonts">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Charge Name</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Value</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Unit</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Item Kind</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>Category</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase green">Edit</button>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase red">Delete</button>
-                    </div>
-                </div>
-                <div class="row form-group light-fonts">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Charge Name</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Value</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Unit</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Item Kind</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>Category</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase green">Edit</button>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase red">Delete</button>
-                    </div>
-                </div>
-                <div class="row form-group light-fonts">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Charge Name</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Value</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Unit</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <label>Item Kind</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>Category</label>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase green">Edit</button>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="button btn-mini uppercase red">Delete</button>
-                    </div>
-                </div>
-
-                <div class="row form-group">
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Charge Name"> <!-- dropdown -->
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Value">
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Flat/%tage">
-                    </div>
-                    <div class="col-xs-6 col-sm-2 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="Item Kind">
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <input type="text" class="input-text full-width" placeholder="category">
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-1">
-                        <button class="btn-small uppercase">Add More</button>
-                        <!--<button class="btn-small uppercase red">Remove</button>-->
-                    </div>
-
-                </div>
-                <hr>
-            </tab>
-        </tabset>
+        <ul class="nav nav-tabs">
+            <li ui-sref-active="active" ui-sref="main.account.settings.general">
+                <a class="ng-click-active">General Settings</a>
+            </li>
+            <li ui-sref-active="active" ui-sref="main.account.settings.shipping">
+                <a class="ng-click-active">Shipping</a>
+            </li>
+            <li ui-sref-active="active" ui-sref="main.account.settings.additionalCharges">
+                <a class="ng-click-active">Additional Charges</a>
+            </li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane active">
+                <ui-view></ui-view>
+            </div>
+        </div>
 
     </div>
-    <!--<h5 class="skin-color">Change Your Password</h5>
-    <form>
-        <div class="row form-group">
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <label>Old Password</label>
-                <input type="text" class="input-text full-width">
-            </div>
-        </div>
-        <div class="row form-group">
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <label>Enter New Password</label>
-                <input type="text" class="input-text full-width">
-            </div>
-        </div>
-        <div class="row form-group">
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <label>Confirm New password</label>
-                <input type="text" class="input-text full-width">
-            </div>
-        </div>
-        <div class="form-group">
-            <button class="btn-medium">UPDATE PASSWORD</button>
-        </div>
-    </form>
-    <hr>
-    <h5 class="skin-color">Change Your Email</h5>
-    <form>
-        <div class="row form-group">
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <label>Old email</label>
-                <input type="text" class="input-text full-width">
-            </div>
-        </div>
-        <div class="row form-group">
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <label>Enter New Email</label>
-                <input type="text" class="input-text full-width">
-            </div>
-        </div>
-        <div class="row form-group">
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <label>Confirm New Email</label>
-                <input type="text" class="input-text full-width">
-            </div>
-        </div>
-        <div class="form-group">
-            <button class="btn-medium">UPDATE EMAIL ADDRESS</button>
-        </div>
-    </form>
-    <hr>
-    <h5 class="skin-color">Send Me Emails When</h5>
-    <form>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox"> Travelo has periodic offers and deals on really cool destinations.
-            </label>
-        </div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox"> Travelo has fun company news, as well as periodic emails.
-            </label>
-        </div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox"> I have an upcoming reservation.
-            </label>
-        </div>
-        <button class="btn-medium uppercase">Update All Settings</button>
-    </form>-->
+
 </div>
