Minor fixes to cart

--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -46,7 +46,7 @@
         <div class="table-cell">
             <dl class="term-description">
                 <dt>Shipping Cost</dt><dd>${{mdl.data.shipping_charge}}</dd>
-                <dt>Service Tax </dt><dd>${{0}}</dd>
+                <dt>Additional</dt><dd>${{0}}</dd>
 
             </dl>
         </div>
