--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -7,7 +7,7 @@
                     <h2>Shipping Address</h2>
                 </div>
 
-                <div class="selector col-sms-6 col-sm-9">
+                <div class="selector col-sms-6 col-sm-9 col-md-8">
                     <select ng-model="mdl.selectedShipping"  required ng-options="site.id as site.name for site in mdl.allSites " class="full-width">
                             <option value="">--Add New--</option>
                     </select>
@@ -130,7 +130,7 @@
                     <h2>Billing Address</h2>
                 </div>
 
-                <div class="selector col-sms-6 col-sm-9">
+                <div class="selector col-sms-6 col-sm-9 col-md-8">
                     <select ng-disabled="mdl.sameAsShipping" ng-model="mdl.selectedBilling"  required ng-options="site.id as site.name for site in mdl.allSites " class="full-width">
                         <option value="">--Add New--</option>
                     </select>
